--- a/index.css
+++ b/index.css
@@ -9,23 +9,60 @@ body {
       width: 100%;
 }
 
+.nav-content {
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      background-color: #220544;
+}
+
+.nav-content h2 {
+      font-size: 20px;
+      font-weight: bold;
+      color: #976ac9;
+}
+
+.nav-list {
+      display: flex;
+      gap: 1rem;
+}
+
+.nav-list li {
+      list-style-type: none;
+}
+
+.nav-list li a {
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+}
+
 .body-content {
       display: flex;
       justify-content: center;
+      align-items: center;
+      height: 100%;
+      flex-direction: column;
+      background-color: rgb(188, 239, 248);
 }
 
+/* Calculator */
 .title {
       margin-top: 0.2rem;
       margin-bottom: 1rem;
-      color: #330033;
+      color: #31485e;
+}
+
+.container {
+      display: flex;
 }
 
 .calculator-container {
-      margin-top: 5rem;
-      width: fit-content;
-      padding-top: 1rem;
-      background-color: #bfcbfe;
-      padding: 2rem;
+      gap: 1rem;
+      background-color: rgb(188, 239, 248);
+      padding: 1rem;
 }
 
 .total-calculation {
@@ -33,7 +70,7 @@ body {
       flex-direction: column;
 }
 
-.calculator-container input {
+.total-calculation input {
       padding-top: 0.5rem;
       padding-bottom: 0.5rem;
       padding-left: 1rem;
@@ -43,6 +80,28 @@ body {
       font-size: 18px;
 }
 
+.reset-button {
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+      background-color: rgb(242, 98, 98);
+      border: none;
+      color: white;
+      font-size: 0.78rem;
+      font-weight: bold;
+      margin-top: 0.5rem;
+      border-radius: 0.3rem;
+}
+
+.total-button {
+      background-color: #1c66ab;
+      color: white;
+      padding: 1rem;
+      margin-top: 0.3rem;
+      border: none;
+      border-radius: 0.3rem;
+
+}
+
 .key-container {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -50,10 +109,11 @@ body {
       grid-column-gap: 0px;
       grid-row-gap: 0px;
       grid-gap: 5px;
-      margin-top: 1rem;
+      user-select: none;
 }
 
 .key-container button {
+      background-color: white;
       width: 100%;
       height: 100%;
       padding-top: 1rem;
@@ -63,6 +123,10 @@ body {
       flex: 2;
       border: none;
       border-radius: 5px;
+}
+
+.key-container button:active {
+      background-color: rgb(183, 183, 183)
 }
 
 .key-layout {
@@ -96,4 +160,64 @@ body {
 
 .key-layout-5 {
       grid-area: 4 / 1 / 5 / 4;
+}
+
+/* Unit Converter */
+.unit-container {
+      display: flex;
+      gap: 2rem;
+}
+
+.left-container,
+.right-container {
+      display: flex;
+      flex-direction: column;
+}
+
+.uInput,
+.uSelect {
+      padding: 1rem;
+}
+
+.unit-button {
+      display: flex;
+      margin-top: 0.5rem;
+}
+
+.unit-button button {
+      flex: 1;
+      padding-top: 0.8rem;
+      padding-bottom: 0.8rem;
+      background-color: #9274b4;
+      border: none;
+      border-radius: 1rem;
+      font-size: 1rem;
+      color: white;
+      font-weight: bold;
+
+}
+
+
+/* Tips Calculator */
+.tips-calculator .tips-flex {
+      display: flex;
+      flex-direction: column;
+
+}
+
+.tips-calculator h4 {
+      opacity: 0.6;
+}
+
+.tips-calculator input {
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+      flex: 1
+}
+
+@media screen and (max-width: 768px) {
+      .calculator-container {
+            flex-wrap: wrap-reverse;
+            justify-content: center;
+      }
 }
